chart2/source/tools/PolynomialRegressionCurveCalculator.cxx
@@ -167,6 +167,8 @@ void SAL_CALL PolynomialRegressionCurveCalculator::recalculateRegression(
     // Calculate correlation coeffitient
     double aSumError = 0.0;
     double aSumTotal = 0.0;
+    double aSumYpred2 = 0.0;
+    double aSumYactual2 = 0.0;
 
     for( sal_Int32 i = 0; i < aNoValues; i++ )
     {
@@ -175,9 +177,20 @@ void SAL_CALL PolynomialRegressionCurveCalculator::recalculateRegression(
         double yPredicted = getCurveValue( xValue );
         aSumTotal += (yActual - yAverage) * (yActual - yAverage);
         aSumError += (yActual - yPredicted) * (yActual - yPredicted);
+        aSumYpred2 += yPredicted * yPredicted;
+        aSumYactual2 += yActual * yActual;
     }
 
-    double aRSquared = 1.0 - (aSumError / aSumTotal);
+    double aRSquared = 0.0;
+    if(mForceIntercept)
+    {
+        if(aSumYactual2 != 0.0)
+            aRSquared = aSumYpred2 / aSumYactual2;
+    }
+    else
+    {
+        aRSquared = 1.0 - (aSumError / aSumTotal);
+    }
 
     if (aRSquared > 0.0)
         m_fCorrelationCoeffitient = std::sqrt(aRSquared);
